--- a/Views/UrlModels/Create.cshtml
+++ b/Views/UrlModels/Create.cshtml
@@ -11,7 +11,7 @@
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
                 <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Dashboard</a></li>
                 <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Urls</li>
-                <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Edit Url</li>
+                <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Create Url</li>
             </ol>
             <h6 class="font-weight-bolder mb-0">Dashboard</h6>
         </nav>
